fix contrast on text in navigation user menu

--- a/Techne/styles/head.less
+++ b/Techne/styles/head.less
@@ -134,3 +134,7 @@ html[lang="en-US"] .title_sv {
         border-color: @primary-nav-color;
     }
 }
+
+.pkp_navigation_user > li > a, .pkp_navigation_user > li.in_focus > a, .pkp_navigation_user > li > a:hover, .pkp_navigation_user > li > a:focus {
+    color: white;
+}
